# nori-bridge-head

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  ci-cd.yml  quality-gate.yml
elf/: sp1-helios-elf
nori/: Cargo.toml  README.md  cold_start_with_wosync_equal  int_test_out  out  rebuild-zk.sh  transition_test
nori-contracts/: .gitignore  README.md  package.json
nori-elf/: nori-sp1-helios-program  nori-sp1-helios-program.pi0.json  nori-sp1-helios-program.vk.json  sp1-helios-program
nori-hash/: Cargo.toml
nori-hash/src/: helios.rs  lib.rs  merkle_poseidon.rs.dep  merkle_poseidon_fixed.rs  poseidon_hash.rs  sha256_hash.rs  utils.rs
nori-primitives/: Cargo.toml
nori-primitives/src/: types.rs
nori-program/: Cargo.toml
nori-program/src/: consensus.rs  lib.rs  main.rs  mpt.rs  sp1_helios.rs
nori/after_frankenstein/: nb_checkpoint copy.json.franken.cold.1  nb_checkpoint copy.json.frankenhackposttransition.working  restart.out
nori/before_frankenstein/after_frankenstein_prehack/: out.from.chkp3
nori/before_frankenstein/output_after_a_while/: after2  after3
nori/before_frankenstein/output_normal_with_store_print/: normal-before-sync-committe-change.3.finalitychanges
nori/before_frankenstein/outputcleanagain/: clean.out  clean.out.3
nori/output_normal_with_store_print/: normal-before-sync-committe-change.1  normal-before-sync-committe-change.2.finalitychanges
nori/outputcleanagain/: clean.out.2
nori/src/: bridge_head.rs  bridge_head_actor.rs  bridge_head_event_loop.rs  event_dispatcher.rs  event_handler.rs  external.rs  helios.rs  lib.rs  notice_messages.rs  poseidon_hash.rs  proof_outputs_decoder.rs  sp1_prover.rs  utils.rs
nori/src/beacon_finality_change_detector/: api.rs  event_loop.rs  event_observer.rs  mod.rs  observer.rs
nori/src/bridge_head/: api.rs  checkpoint.rs  event_handle.rs  event_handler.rs  event_loop.rs  event_observer.rs  finality_change_detector.rs  handles.rs  mod.rs  notice_messages.rs  observer.rs  validate.rs
nori/src/contract/: bindings.rs
nori/src/contract_watcher/: bindings.rs  http.rs  mod.rs  watcher.rs  ws.rs
nori/src/contract_watcher/bindings/: mod.rs  nori_token_bridge.rs
nori/src/contracts/: bindings.rs  package-lock.json  package.json
nori/src/rpcs/: mod.rs
nori/src/rpcs/consensus/: mod.rs
nori/src/rpcs/execution/: http.rs  mod.rs  ws.rs
nori/tests/: benchmark_sha256_serde.rs  next_sync_hack.rs.old  next_sync_hack_2.rs  poseidon.rs  store_sync.rs  store_sync.rs.old  test_utils.rs  token_contract.rs  transition.rs
nori/tests/data/: store.11457376.json
primitives/: Cargo.toml
primitives/src/: types.rs
program/: Cargo.toml
program/src/: light_client.rs  main.rs
script/: Cargo.toml  build.rs
testing outputs blocker/output_after_a_while/: after-committee-change
