[package]
version = "0.1.0"
name = "nori-hash"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
helios-consensus-core = { workspace = true }
serde_cbor = { workspace = true }
sp1-helios-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
tree_hash = { workspace = true }
kimchi = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
sha2-v0-10-8 = { workspace = true }
rmp-serde = "1.3.0"