[package]
version = "0.1.0"
name = "nori-sp1-helios-program"
edition.workspace = true
license.workspace = true
authors.workspace = true

#[lib]
#path = "src/lib.rs"
#name = "nori-program"

[dependencies]
sp1-zkvm = "5.0.0"
helios-consensus-core = { workspace = true }
serde_cbor = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
alloy-trie = { workspace = true }
alloy-rlp = { workspace = true }
tree_hash = { workspace = true }
anyhow = { workspace = true }
nori-sp1-helios-primitives = { workspace = true }
nori-hash = { workspace = true }
log = { workspace = true }
kimchi = { workspace = true }