[package]
version = "3.0.1"
name = "nori"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "nbhead"
path = "./bin/nori_bridge_head.rs"

[lib]
path = "src/lib.rs"
name = "nori"

[dependencies]
nori-hash = { workspace = true }
nori-sp1-helios-primitives = { workspace = true }
nori-sp1-helios-program = { workspace = true }
dotenv = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { workspace = true }
helios-consensus-core = { workspace = true }
helios-ethereum = { workspace = true }
#sp1-helios-primitives = { workspace = true }
#sp1-helios-script = { workspace = true}
kimchi = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
alloy-primitives = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
reqwest = { workspace = true }
tree_hash = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1.86"
futures = "0.3.31"
rand = "0.9.0"
chrono = "0.4.39"

[build-dependencies]
sp1-build = { workspace = true }
