[package]
version = "0.1.0"
name = "sp1-helios-program"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "make"
path = "./bin/make.rs"

[dependencies]
sp1-zkvm = "4.0.0"
sp1-build = { workspace = true }
sp1-sdk = { workspace = true }
helios-consensus-core = { workspace = true }
serde_cbor = { workspace = true }
sp1-helios-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
tree_hash = { workspace = true }
